Headless: Wire up a basic NetLog if we're not logging to disk

DevTools relies on a NetLogObserver (which needs a NetLog) to return the
raw response headers, e.g. Set-Cookie headers.

Bug: 692090
Change-Id: I9faae71198b7c45d1dc05175b606452012d7ec83