headless/lib/browser/headless_content_browser_client.cc
@@ -240,4 +240,8 @@ void HeadlessContentBrowserClient::ResourceDispatcherHostCreated() {
       resource_dispatcher_host_delegate_.get());
 }
 
+net::NetLog* HeadlessContentBrowserClient::GetNetLog() {
+  return browser_->browser_main_parts()->net_log();
+}
+
 }  // namespace headless
