headless/lib/browser/headless_content_browser_client.h
@@ -52,6 +52,8 @@ class HeadlessContentBrowserClient : public content::ContentBrowserClient {
 
   void ResourceDispatcherHostCreated() override;
 
+  net::NetLog* GetNetLog() override;
+
  private:
   std::unique_ptr<base::Value> GetBrowserServiceManifestOverlay();
   std::unique_ptr<base::Value> GetRendererServiceManifestOverlay();
